# react-native-jsi-contacts

./: CONTRIBUTING.md  README.md  package.json  react-native-jsi-contacts.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: ContactHostObject.cpp  ContactHostObject.h  JContactsProvider.cpp  JContactsProvider.h  JSIContacts.cpp  JSIContacts.h  JSIJNIConversion.cpp  JSIJNIConversion.h  nativeInstall.cpp
android/src/main/cpp/java-bindings/: JArrayList.h  JContact.cpp  JContact.h  JContactsProvider.cpp  JContactsProvider.h  JHashMap.cpp  JHashMap.h
android/src/main/java/com/mrousavy/jsi/contacts/: Contact.java  ContactsProvider.java  JsiContactsJSIPackage.java  JsiContactsModule.java  JsiContactsPackage.java
android/src/main/java/com/reactnativejsicontacts/: JsiContactsModule.java  JsiContactsPackage.java
example/: app.json  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativejsicontacts/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/jsicontacts/: MainApplication.java
example/android/app/src/main/java/com/example/reactnativejsicontacts/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/JsiContactsExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/JsiContactsExample.xcodeproj/: project.pbxproj
example/ios/JsiContactsExample.xcodeproj/xcshareddata/xcschemes/: JsiContactsExample.xcscheme
example/ios/JsiContactsExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: JsiContacts.h  JsiContacts.mm
ios/JsiContacts.xcodeproj/: project.pbxproj
src/: index.tsx
